k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: safari-test
  labels:
    app: safari-test

spec:
  replicas: 1
  selector:
    matchLabels:
      app: safari-test
  template:
    metadata:
      labels:
        app: safari-test
    spec:
      containers:
        - name: safari-test
          image: eyopaa/safari-test:latest
          imagePullPolicy: Always
          
          ports:
            - containerPort: 3000
