k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
  labels:
    name: postgres-deploy
    app: safari-test
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      name: postgres-pod
      app: safari-test
  template:
    metadata:
      name: postgres-pod
      labels:
        name: postgres-pod
        app: safari-test
    
    spec: 
      containers:
      - name: postgres
        image: postgres
        ports:
          - containerPort: 5432
