k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    name: db-service
    app: safari-test

spec: 
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    name: postgres-pod
    app: safari-test
