k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: safari-test
  

spec: 
  ingressClassName: nginx
  rules: 
  - host: localhost
    http: 
      paths: 
      - pathType: Prefix
        path: /
        backend: 
          service: 
            name: safari-test-api-service
            port: 
              number: 3000
